# Distributed-Calculator

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  format.sh
calc_leader/: Dockerfile
calc_replica/: Dockerfile
shared_calculator/: CMakeLists.txt
shared_calculator/common/: CMakeLists.txt  shared_calculator_common.cpp  shared_calculator_common.h
shared_calculator/proto/: sharedCalculator.proto
shared_calculator/shared_calculator_bridge/: CMakeLists.txt  shared_calculator_bridge.m.cpp
shared_calculator/shared_calculator_leader/: CMakeLists.txt  Dockerfile  shared_calculator_bridge.cpp  shared_calculator_bridge.h  shared_calculator_leader.cpp  shared_calculator_leader.h  shared_calculator_leader.m.cpp
shared_calculator/shared_calculator_replica/: CMakeLists.txt  Dockerfile  shared_calculator_replica.cpp  shared_calculator_replica.h  shared_calculator_replica.m.cpp
tests/: CMakeLists.txt  shared_calculator_leader.t.cpp
